--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <img src="./10.jpg" height="50%" width="70%" /></center>
 </div>
 <div id="b"> </div>
-<div id="c"> <a href="女神/4.jpg"> <img src=".1.1.jpg" height="100%" width="25%"/></a>
-<a href="女神/6.jpg"> <img src="./1.2.jpg"  height="100%" width="25%"/></a>
-<a href="女神/3.jpg"><img src="./1,3.jpg" height="100%" width="25%" /></a>
-<a href="女神/5.jpg"><img src="./1.4.jpg" height="100%" width="24%" /></a>
+<div id="c"> <a href="./4.jpg"> <img src=".1.1.jpg" height="100%" width="25%"/></a>
+<a href="./6.jpg"> <img src="./1.2.jpg"  height="100%" width="25%"/></a>
+<a href="./3.jpg"><img src="./1,3.jpg" height="100%" width="25%" /></a>
+<a href="./5.jpg"><img src="./1.4.jpg" height="100%" width="24%" /></a>
 
 
  </div>
